--- a/Angular-Course/PhotoManager/PhotoManager.UI/bin/PhotoManager.UI.dll.config
+++ b/Angular-Course/PhotoManager/PhotoManager.UI/bin/PhotoManager.UI.dll.config
@@ -33,10 +33,10 @@
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
 
-    <customErrors mode="On" redirectMode="ResponseRewrite" defaultRedirect="~/Error.cshtml">
+    <!--<customErrors mode="On" redirectMode="ResponseRewrite" defaultRedirect="~/Error.cshtml">
       <error statusCode="404" redirect="~/Error.cshtml" />
       <error statusCode="500" redirect="~/Error.cshtml" />
-    </customErrors>
+    </customErrors>-->
     <httpModules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
@@ -52,14 +52,14 @@
     </handlers>
 
 
-    <httpErrors errorMode="Custom" existingResponse="Replace">
+    <!--<httpErrors errorMode="Custom" existingResponse="Replace">
       <remove statusCode="404" />
       <remove statusCode="403" />
       <remove statusCode="500" />
       <error statusCode="404" path="/error/" responseMode="ExecuteURL" />
       <error statusCode="403" path="/error/" responseMode="ExecuteURL" />
       <error statusCode="500" path="/error/" responseMode="ExecuteURL" />
-    </httpErrors>
+    </httpErrors>-->
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
